--- a/app/src/main/res/layout/other_detail_layout.xml
+++ b/app/src/main/res/layout/other_detail_layout.xml
@@ -45,6 +45,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Jump Data"
                 android:gravity="center"
+                android:layout_marginBottom="2dp"
                 android:textColor="@android:color/black"
                 android:background="#FFAA99"
                 android:id="@+id/jump_data_label" />
