--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -1,7 +1,8 @@
 <preference-headers
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <header android:icon="@drawable/ic_launcher"
+    <header
+        android:icon="@drawable/ic_launcher"
         android:title="Settings"
         android:summary="Application Settings">
     </header>
